mdt_core/src/snapshots/mdt____tests__snapshot_parse_full_document.snap
---
source: mdt/src/__tests.rs
expression: blocks
---
[
    Block {
        name: "header",
        type: Provider,
        opening: 3:1-3:19 (9-27),
        closing: 7:1-7:19 (58-76),
        transformers: [],
    },
    Block {
        name: "header",
        type: Consumer,
        opening: 11:1-11:19 (90-108),
        closing: 15:1-15:19 (123-141),
        transformers: [],
    },
    Block {
        name: "docs",
        type: Consumer,
        opening: 17:1-17:36 (143-178),
        closing: 21:1-21:17 (188-204),
        transformers: [
            Transformer {
                type: Trim,
                args: [],
            },
            Transformer {
                type: Indent,
                args: [
                    String(
                        "  ",
                    ),
                ],
            },
        ],
    },
]
