mdt_core/src/snapshots/mdt____tests__snapshot_tokenize_closing.snap
---
source: mdt/src/__tests.rs
expression: groups
---
[
    TokenGroup {
        tokens: [
            HtmlCommentOpen,
            Whitespace(
                32,
            ),
            CloseTag,
            Ident(
                "blockName",
            ),
            BraceClose,
            Whitespace(
                32,
            ),
            HtmlCommentClose,
        ],
        position: 1:1-1:22 (0-21),
    },
]
